src/components/slide/slide.css
.slideParent {
	padding: 1em;
	display: flex;
	flex-direction: column;
	align-items: center;
	justify-content: center;
	height: 10rem;
	width: 13rem;
	border-radius: 30px;
	background: white;
}

.slideImage {
	height: 100%;
	width: 100%;
}

.titleText {
	font-size: 1.4rem;
	font-weight: 700;
}

.image {
	object-fit: cover;
	height: 100%;
	width: 100%;
}

.splide.is-active .splide__list {
	gap: 0.5em;
}

